PZS-NG CHANGELOG
----------------

v1.1.0a --> 1.1.x :
		- fix in tv-rage tcl to compensate for layout changes.
		- fixed small bug in postdel that prevented it from removing progressbars in
		  mp3-releases. Thanks goes to |DureX| for report and fix.
		- fixed a bug in rescan that prevented it from (re-)creating mp3-symlinks.
		- added check_for_missing_sample_dirs and create_missing_sample_link vars.
		- updated psxc-imdb to 2.9g
		- changed default allowed_years to include 2008 and exclude 2004
                - we no longer manually add spaces between racers in sortstats()/racer_list,
                  so racersplit is now per default " ". Neither do we add a space after
                  racersplit_prior.
                - renamed racersplit_prior to racersplit_prefix, and removed it from conf 
                  (it's been deprecated for a while).
                - removed racersplit & racersmsg from conf. (it's been deprecated for a while)
                - added racersplit_postfix.
                - %T/%t now users racersplit* too.
		- fixed a bug re: sort_by_group - case should now no longer matter
		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
		- fixed small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
		- fixed small bug in sample_list.

v1.1.0 --> 1.1.0a : (r2414)
		- stats in announces were broken in v1.1.0, ``hotfix''.

v1.0.10 --> 1.1.0 : (r2412)
		- fixed a typo with complete_bar and chmod_completebar (tnx losty)
		- new dZSbot.conf option: ftpd_type. this should be set to "other" if you're
		  running something other than glftpd.
		- added improvements to !incompletes showing percent missing.
		- added feature to ng_free for using mountpoint along with device.
		- don't use the '$' cookie in the zipscript statusbars (fixed a segfault in
		  in case you do - thanx sked for the report)
		- fixed a bug with chmod_completebar.
		- added option for two sets of generic incomplete indicators.